Merge conflict resolution for Java11
Signed-off-by: expani <anijainc@amazon.com>