@@ -34,6 +34,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 /**
  * Helper class for building star-tree query
@@ -146,7 +147,7 @@ public class StarTreeQueryHelper {
     }
 
     public static Dimension getMatchingDimensionOrNull(String dimensionName, List<Dimension> orderedDimensions) {
-        List<Dimension> matchingDimensions = orderedDimensions.stream().filter(x -> x.getField().equals(dimensionName)).toList();
+        List<Dimension> matchingDimensions = orderedDimensions.stream().filter(x -> x.getField().equals(dimensionName)).collect(Collectors.toList());
         if (matchingDimensions.size() != 1) {
             return null;
         }
